# idk

./: .gitignore  README.md  docker-compose.yml
services/backend/: Dockerfile  example.env  pyproject.toml  requirements.txt
services/backend/apps/: main.py
services/backend/apps/api/rest/v0/: routes.py
services/backend/apps/api/rest/v1/: routes.py
services/backend/apps/config/: __init__.py  config.py
services/backend/apps/infra/application/: factory.py  result.py
services/backend/apps/infra/application/setup/: cors.py  logging.py  tracing.py
services/backend/apps/service/auth/: dependency.py  exception.py  jwks.py  jwt.py
services/backend/apps/service/health_check/: service.py  views.py
services/backend/apps/service/health_check/checks/: uptime.py
services/backend/apps/service/spi/: client.py  dependency.py
services/backend/src/api/rest/v0/: routes.py
services/backend/src/api/rest/v1/: paths.py
services/backend/src/apps/auth/: dependency.py  enums.py  jwks.py  jwt.py  policies.py
services/backend/src/apps/document_app/: client.py  constants.py  decorators.py  dependency.py  dto.py  service.py
services/backend/src/apps/documents/: client.py  constants.py  decorators.py  dependency.py  dto.py  exceptions.py  service.py  utils.py
services/backend/src/apps/documents/schemas/: __init__.py  download.py  email.py  preview.py  search.py
services/backend/src/apps/documents/services/: base_service.py  download_service.py  email_service.py  preview_service.py  search_service.py
services/backend/src/apps/documents/utils/: content_generator.py  (+2 more)
services/backend/src/apps/health_check/: dto.py  service.py  views.py
services/backend/src/apps/spi/: client.py  constants.py  dependency.py  dto.py
services/backend/src/config/: config.py
services/backend/src/infra/application/: exception.py  exception_handlers.py  factory.py
services/backend/tests/: base.py  test_api_health.py
(+24 files in other folders)
